infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jatra
  labels:
    name: jatra
    environment: production
